[ Add ] question controller 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+## MongoDB Config
+spring.data.mongodb.uri = mongodb://localhost:27017
+#spring.data.mongodb.database = nnaadb
+#spring.data.mongodb.username = nnaauser
+#spring.data.mongodb.password = nnaapass
 
+spring.data.mongodb.database = nnaatestdb
+spring.data.mongodb.username = nnaatestuser
+spring.data.mongodb.password = nnaatestpass
