--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile group: 'com.google.oauth-client', name: 'google-oauth-client', version: '1.30.5'
+
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+
+    implementation 'com.google.api-client:google-api-client:1.30.7'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compileOnly 'org.projectlombok:lombok'
