[ Add ] 이메일, 소셜 로그인 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.data.mongodb.host= localhost
-spring.data.mongodb.port= 27017
-spring.data.mongodb.database = nnaatestdb
-spring.data.mongodb.username = nnaatestuser
-spring.data.mongodb.password = nnaatestpass
+#spring.data.mongodb.uri=mongodb+srv://nnaatestuser:nnaatestpass@nnaa-db-uq62x.mongodb.net/nnaatestdb?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://nnaatestuser:nnaatestpass@nnaa-db-uq62x.mongodb.net/nnaatestdb?retryWrites=true&w=majority
+
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
