--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,11 @@ repositories {
 
 dependencies {
     compile group: 'com.google.oauth-client', name: 'google-oauth-client', version: '1.30.5'
-
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-
     implementation 'com.google.api-client:google-api-client:1.30.7'
+
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.10.1'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
